# lc

./: .gitignore  README.md  input.yaml  pyproject.toml
data/catalogues/: barclays_residential_criteria_2026-05-31.json  natwest_lending_criteria_2026-05-31.json
data/sources/: barclays_intermediaries_residential_criteria_2026-05-31.html  halifax_intermediaries_criteria_2026-05-30.html  natwest_intermediary_lending_criteria_2026-05-31.html  natwest_intermediary_solutions_additional_borrowing_html_2026-05-31.html  natwest_intermediary_solutions_affordability_html_2026-05-31.html  natwest_intermediary_solutions_btl_hub_html_2026-05-31.html  (+25 more)
docs/: architecture.md  development.md  input-format.md  rules-and-catalogue.md
test-cases/: additional-raw-case-38-joint-non-spouse-dependants-retained.yaml  additional-raw-case-39-joint-employed-self-employed-rich-portfolio.yaml  additional-raw-case-40-joint-remortgage-capital-raising-part-and-part.yaml  additional-raw-case-41-joint-shared-ownership-contractor-employed.yaml  additional-raw-case-42-joint-shared-equity-remortgage-mixed-income.yaml  additional-raw-case-43-joint-further-advance-retired-employed-heavy-commitments.yaml  additional-raw-case-44-joint-scotland-leasehold-llp-partnership-interest-only.yaml  additional-raw-case-45-joint-home-mover-high-variable-income-btl-surplus.yaml  additional-raw-case-46-joint-purchase-benefits-maintenance-employed.yaml  additional-raw-case-47-joint-remortgage-paydown-ltd-sole-trader.yaml  additional-raw-case-48-joint-ftb-high-commitments-part-and-part.yaml
tests/: test_evaluator.py
(+30 files in other folders)
