[project]
name = "halifax-criteria"
version = "0.1.0"
description = "Indicative UK lender mortgage criteria evaluator"
readme = "README.md"
authors = [
    { name = "Vaibhav", email = "sontakkevaibhav74@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
]

[project.scripts]
halifax-criteria = "halifax_criteria.cli:main"
lending-criteria = "halifax_criteria.cli:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
